# railvay

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  Документация.md
.github/workflows/: render-keepalive.yml
ceai/: __init__.py  config.py  database.py  formatting.py  health.py  internal_api.py  json_utils.py  main.py  payment_notifications.py  pricing.py  public_offer.py  runtime_diagnostics.py  seed.py  time_utils.py  vpn_worker_api.py
ceai/bot/: handlers.py  keyboards.py
ceai/providers/: base.py  deepseek.py  identity.py  kling_video.py  mock.py  openai_image.py  openai_text.py  openai_tts.py  router.py
ceai/repositories/: __init__.py  admin.py  app_settings.py  base.py  coins.py  generations.py  model_prices.py  payments.py  plans.py  users.py  (+12 more)
docs/: VPN_SERVER_RUNBOOK.md
migrations/: 001_init.sql  002_remove_music_generation_type.sql  003_admin_tools.sql  004_app_settings.sql  005_text_chats.sql  006_referral_program.sql  007_yookassa_auto_renewal.sql  008_vpn.sql  009_vpn_worker.sql  010_vpn_payments.sql  011_vpn_platega_payments.sql  012_vpn_referral_rewards.sql
scripts/: publish_telegraph_legal.py
tests/: __init__.py  test_ai_platega_payments.py  test_business_logic.py  test_database.py  test_marzban_client.py  test_platega.py  test_vpn_bot_ui.py  test_vpn_nginx_config.py  test_vpn_payment_handlers.py  test_vpn_payments.py  test_vpn_platega_http.py  test_vpn_platega_payments.py  test_vpn_platega_repository.py  test_vpn_referral_rewards.py  test_vpn_repository.py  test_vpn_runtime.py  test_vpn_worker.py
(+44 files in other folders)
